; ModuleID = '/home/carl/AnghaBench/linux/fs/ecryptfs/extr_crypto.c_ecryptfs_read_and_validate_header_region.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ecryptfs/extr_crypto.c_ecryptfs_read_and_validate_header_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }

@ECRYPTFS_SIZE_AND_MARKER_BYTES = common dso_local global i32 0, align 4
@ECRYPTFS_FILE_SIZE_BYTES = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecryptfs_read_and_validate_header_region(%struct.inode* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.inode*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %3, align 8
  %9 = load i32, i32* @ECRYPTFS_SIZE_AND_MARKER_BYTES, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %4, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %5, align 8
  %13 = load i32, i32* @ECRYPTFS_FILE_SIZE_BYTES, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  store i32* %15, i32** %6, align 8
  %16 = load i32, i32* @ECRYPTFS_SIZE_AND_MARKER_BYTES, align 4
  %17 = load %struct.inode*, %struct.inode** %3, align 8
  %18 = call i32 @ecryptfs_read_lower(i32* %12, i32 0, i32 %16, %struct.inode* %17)
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %1
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %2, align 4
  store i32 1, i32* %8, align 4
  br label %41

23:                                               ; preds = %1
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @ECRYPTFS_SIZE_AND_MARKER_BYTES, align 4
  %26 = icmp slt i32 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %23
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %2, align 4
  store i32 1, i32* %8, align 4
  br label %41

30:                                               ; preds = %23
  br label %31

31:                                               ; preds = %30
  %32 = load i32*, i32** %6, align 8
  %33 = call i32 @ecryptfs_validate_marker(i32* %32)
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %7, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %39, label %36

36:                                               ; preds = %31
  %37 = load %struct.inode*, %struct.inode** %3, align 8
  %38 = call i32 @ecryptfs_i_size_init(i32* %12, %struct.inode* %37)
  br label %39

39:                                               ; preds = %36, %31
  %40 = load i32, i32* %7, align 4
  store i32 %40, i32* %2, align 4
  store i32 1, i32* %8, align 4
  br label %41

41:                                               ; preds = %39, %27, %21
  %42 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %42)
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ecryptfs_read_lower(i32*, i32, i32, %struct.inode*) #2

declare dso_local i32 @ecryptfs_validate_marker(i32*) #2

declare dso_local i32 @ecryptfs_i_size_init(i32*, %struct.inode*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
